# tapl

./: Makefile  stack.yaml  tapl.cabal
src/: Coproduct.hs  Eval.hs  Lib.hs
test/: Spec.hs
