name:                tapl
version:             0.1.0.0
homepage:            https://github.com/ejconlon/tapl
license:             BSD3
license-file:        LICENSE
author:              Eric Conlon
maintainer:          ejconlon@gmail.com
copyright:           2018 Eric Conlon
category:            Other
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Coproduct
                     , Eval
  build-depends:       base >= 4.10 && < 5
                     , bound
                     , comonad
                     , containers
                     , data-fix
                     , deriving-compat
                     , mtl
                     , transformers
  default-language:    Haskell2010

test-suite tapl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tapl
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
